--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
       "types": "./src/@preact-signals-core/index.d.ts",
       "import": "./src/@preact-signals-core/index.js"
     },
+    "./@vue-reactivity": {
+      "types": "./src/@vue-reactivity/index.d.ts",
+      "import": "./src/@vue-reactivity/index.js"
+    },
     "./@webreflection-signal": {
       "types": "./src/@webreflection-signal/index.d.ts",
       "import": "./src/@webreflection-signal/index.js"
@@ -48,12 +52,16 @@
   },
   "peerDependencies": {
     "@preact/signals-core": "^1",
+    "@vue/reactivity": "^3",
     "@webreflection/signal": "^2",
     "alien-signals": "^1",
     "usignal": "^0.9"
   },
   "peerDependenciesMeta": {
     "@preact/signals-core": {
+      "optional": true
+    },
+    "@vue/reactivity": {
       "optional": true
     },
     "@webreflection/signal": {
