--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "peerDependencies": {
     "@preact/signals-core": "^1",
+    "@solidjs/testing-library": "^0.8",
     "@vue/reactivity": "^3",
     "@webreflection/signal": "^2",
     "alien-signals": "^1",
@@ -70,6 +71,9 @@
   },
   "peerDependenciesMeta": {
     "@preact/signals-core": {
+      "optional": true
+    },
+    "@solidjs/testing-library": {
       "optional": true
     },
     "@vue/reactivity": {
