--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
       "types": "./src/compostate/index.d.ts",
       "import": "./src/compostate/index.js"
     },
+    "./mobx": {
+      "types": "./src/mobx/index.d.ts",
+      "import": "./src/mobx/index.js"
+    },
     "./signia": {
       "types": "./src/signia/index.d.ts",
       "import": "./src/signia/index.js"
@@ -73,6 +77,7 @@
     "alien-signals": "^1",
     "compostate": "^0.6.0-alpha.1",
     "fast-deep-equal": "^3",
+    "mobx": "^6",
     "signia": "^0.1",
     "solid-js": "^1",
     "usignal": "^0.9",
@@ -95,6 +100,9 @@
       "optional": true
     },
     "fast-deep-equal": {
+      "optional": true
+    },
+    "mobx": {
       "optional": true
     },
     "signia": {
